--- a/donate.html
+++ b/donate.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spark Foundation</title>
-    <link rel="stylesheet" href="/css/style2.css">
+    <link rel="stylesheet" href="/The-Spark-Foundation/css/style2.css">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
       </style>
@@ -14,8 +14,8 @@
   <nav class="navbar">
     <ul class="nav-list">
       <h2 class="nav-heading" >Spark Foundation</h2>
-      <li class="list-items"><a href="/index.html">HOME</a></li>
-      <li class="list-items"><a href="/donate.html">DONATE</a></li>
+      <li class="list-items"><a href="/The-Spark-Foundation/index.html">HOME</a></li>
+      <li class="list-items"><a href="/The-Spark-Foundation/donate.html">DONATE</a></li>
       <li class="list-items"><a href="http://thesparksfoundationsingapore.org" target="_blank">ABOUT</a></li>
       <li class="list-items"><a href="http://thesparksfoundationsingapore.org/contact-us/" target="_blank">CONTACT</a></li>
     </ul>
